# contract-lens

./: .env.example  DEPLOY.md  Dockerfile  README.md  pyproject.toml
evals/: judge.py  metrics.py  run_evals.py
evals/dataset/: cases.json
src/contract_lens/: __init__.py  api.py  cli.py  client.py  config.py  models.py  prompts.py  reviewer.py
tests/: conftest.py  test_core.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  types.ts
