[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-lens"
version = "1.0.0"
description = "An AI contract / terms-of-service reviewer — flags risky clauses (auto-renewal, liability, IP assignment, data rights…) with severity and a verbatim quote, grounded in the document, with a planted-clause eval harness. Educational, not legal advice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kareem Ghazal" }]
dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
contract-lens = "contract_lens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_lens"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests", "evals"]
testpaths = ["tests"]
addopts = "-q"
